Cancel register for the event - fixed tests again